--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cron": "^1.8.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fs": "^0.0.1-security",
     "pg": "^8.7.3",
     "twit": "^2.2.11"
   }
